--- a/index.html
+++ b/index.html
@@ -8,30 +8,34 @@
 <body>
 <div class="container">
  	<div class="divPrincipal">
-	<h1> IFFLIX</h1>
-	 <h2> LOGIN </h2>
-	 	<div class="login">
-	 		<input type="text" id="usuario" placeholder="Usuario">
+	<h1> CADASTRO</h1>
+		<p> Nome Completo:</p>
+        <div class="login">
 
-	 	</div>
+            <input type="text" id="NomeComp" placeholder="Nome e Sobrenome">
+
+        </div>
+		<p> Nome de Usuario:</p>
+        <div class="login">
+            <input type="text" id="usuario" placeholder="Nome do seu perfil principal">
+
+        </div>
+		<p> E-mail:</p>
+        <div class="login">
+            <input type="email" id="Email" placeholder="Exemplo@gmail.com">
+
+        </div>
+		<p> Senha:</p>
 		 <div class="login">
-			<input type="password" id="senha" placeholder="Senha">
+			<input type="password" id="senha" placeholder="No minimo 8 caracteres">
 
 		</div>
-		<div class="esquecido">
-			<a href="">Esqueceu a senha?</a>
-		</div>
-		
-		<div class="pflexbox">
-			<button>Entrar</button>
-		</div>
-		<div class="pflexbox">
-			<hr>
-		</div>
+		<p> Confirmar senha:</p>
+		<div class="login">
+			<input type="password" id="senha" placeholder="As senhas devem coincidir">
 
-		<p> Não tem uma conta?
-		  <a href="file:///C:/Users/GIOVANE.ok/Desktop/Tela%20de%20cadastro/index.html"> Cadastre-se agora</a>
-
+		</div>
+			<button>Cadastrar</button>
  	</div>
 
 </div>
